feat(plugin): rename favorite actions to pin/unpin and update related icons
* Changed `AddFavoriteResult` to `PinResult` and `RemoveFavoriteResult` to `UnpinResult` for clarity.
* Updated action names and icons in the plugin manager and clipboard plugin.
* Modified language files to reflect new terminology for pinning results.
* Adjusted settings structure to replace `FavoriteResults` with `PinedResults`.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -409,7 +409,7 @@
   "plugin_installer_verb_upgrade_past": "atualizado",
   "plugin_installer_verb_uninstall_past": "desinstalado",
   "plugin_installer_verb_reinstall_past": "reinstalado",
-  "plugin_installer_verb_downgrade_past": "rebaixado",
+  "plugin_installer_verb_downgrade_past": "revertido",
   "plugin_ai_command_name": "Nome",
   "plugin_ai_command_name_tooltip": "O nome do comando de IA",
   "plugin_ai_command_command": "Comando",
@@ -452,10 +452,10 @@
   "plugin_file_everything_please_run_everything": "Por favor, execute o Everything",
   "plugin_file_everything_goto_website": "Ir para o site do Everything",
   "plugin_manager_query_failed": "Consulta %s falhou",
-  "plugin_manager_remove_from_favorite": "Desafixar da consulta atual",
-  "plugin_manager_add_to_favorite": "Fixar na consulta atual",
-  "plugin_manager_add_to_favorite_success": "Fixado, será priorizado na consulta atual",
-  "plugin_manager_remove_from_favorite_success": "Desafixado",
+  "plugin_manager_unpin_in_query": "Desafixar da consulta atual",
+  "plugin_manager_pin_in_query": "Fixar na consulta atual",
+  "plugin_manager_pin_in_query_success": "Fixado, será priorizado na consulta atual",
+  "plugin_manager_unpin_in_query_success": "Desafixado",
   "plugin_manager_invalid_query_type": "Tipo de consulta inválido",
   "plugin_ai_chat_agents": "Agentes",
   "plugin_ai_chat_agents_tooltip": "Configure agentes de IA com prompts e ferramentas personalizados",
