--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -410,7 +410,7 @@
   "plugin_installer_verb_uninstall_past": "удален",
   "plugin_installer_verb_reinstall_past": "переустановлен",
   "plugin_installer_verb_downgrade_past": "понижен",
-  "plugin_ai_command_name": "Название",
+  "plugin_ai_command_name": "Имя",
   "plugin_ai_command_name_tooltip": "Название команды ИИ",
   "plugin_ai_command_command": "Команда",
   "plugin_ai_command_command_tooltip": "Команда для запуска этой команды ИИ",
@@ -452,10 +452,10 @@
   "plugin_file_everything_please_run_everything": "Пожалуйста, запустите Everything",
   "plugin_file_everything_goto_website": "Перейти на сайт Everything",
   "plugin_manager_query_failed": "Запрос %s не выполнен",
-  "plugin_manager_remove_from_favorite": "Открепить от текущего запроса",
-  "plugin_manager_add_to_favorite": "Закрепить в текущем запросе",
-  "plugin_manager_add_to_favorite_success": "Закреплено, будет приоритетным в текущем запросе",
-  "plugin_manager_remove_from_favorite_success": "Откреплено",
+  "plugin_manager_unpin_in_query": "Открепить от текущего запроса",
+  "plugin_manager_pin_in_query": "Закрепить в текущем запросе",
+  "plugin_manager_pin_in_query_success": "Закреплено, будет приоритетным в текущем запросе",
+  "plugin_manager_unpin_in_query_success": "Откреплено",
   "plugin_manager_invalid_query_type": "Недопустимый тип запроса",
   "plugin_ai_chat_agents": "Агенты",
   "plugin_ai_chat_agents_tooltip": "Настройте ИИ-агентов с пользовательскими подсказками и инструментами",
