feat(plugin): add message for plugins without settings
* Added a new translation key `ui_plugin_no_settings` for indicating that a plugin has no settings.
* Updated the plugin settings view to display this message when no settings are available.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -142,6 +142,7 @@
   "ui_plugin_disable": "Disable",
   "ui_plugin_enable": "Enable",
   "ui_plugin_tab_settings": "Settings",
+  "ui_plugin_no_settings": "This plugin has no settings",
   "ui_plugin_tab_trigger_keywords": "Trigger Keywords",
   "ui_plugin_tab_commands": "Commands",
   "ui_plugin_tab_description": "Description",
