feat(plugin): enhance script plugin metadata format and add environment variable support
- Updated script plugin metadata to use a JSON object format for better structure and clarity.
- Added support for accessing plugin settings via environment variables prefixed with `WOX_SETTING_`.
- Improved error handling for missing metadata and provided default values for required fields.
- Enhanced user feedback in the plugin creation process with localized messages for success and failure scenarios.

--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -395,6 +395,12 @@
   "plugin_wpm_enter_plugin_name_subtitle": "输入您要创建的插件名称",
   "plugin_wpm_group_regular_plugins": "常规插件 (全功能插件)",
   "plugin_wpm_group_script_plugins": "脚本插件 (轻量单文件插件)",
+  "plugin_wpm_script_plugin_created_success": "脚本插件创建成功：%s",
+  "plugin_wpm_create_script_file_failed": "创建脚本文件失败：%s",
+  "plugin_wpm_copying_template": "正在复制模板...",
+  "plugin_wpm_read_template_failed": "读取模板文件失败：%s",
+  "plugin_wpm_overwriting_script_plugin": "正在覆盖现有脚本插件：%s",
+  "plugin_wpm_plugin_name_empty": "插件名称不能为空",
   "plugin_wpm_command_dev_list": "列出本地 Wox 插件",
   "plugin_wpm_command_dev_add": "添加现有的 Wox 插件目录",
   "plugin_wpm_command_dev_remove": "移除本地 Wox 插件，后跟目录",
