feat(theme): enhance theme plugin with AI integration and internationalization
* Added AI theme generation functionality with user prompts.
* Updated theme metadata descriptions for internationalization.
* Improved UI interactions for theme management.
* Enhanced language support in multiple locales (en_US, pt_BR, ru_RU, zh_CN).
* Refactored theme installation and uninstallation processes.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -509,10 +509,32 @@
   "plugin_mediaplayer_no_media": "No media",
   "plugin_mediaplayer_artist": "Artist",
   "plugin_mediaplayer_album": "Album",
+  "plugin_theme_ai_command_description": "Generate a new theme with AI",
   "plugin_theme_ai_contacting": "Contacting AI...",
-  "plugin_theme_ai_generating": "Generating...",
+  "plugin_theme_ai_extract_failed": "Failed to extract json",
+  "plugin_theme_ai_generate_subtitle": "Enter to generate",
+  "plugin_theme_ai_generate_title": "Generate theme with AI",
   "plugin_theme_ai_generated": "Theme generated",
+  "plugin_theme_ai_generating": "Generating...",
+  "plugin_theme_ai_input_hint": "Please describe the theme you want to generate",
+  "plugin_theme_ai_unmarshal_failed": "Failed to unmarshal model",
   "plugin_theme_ai_waiting": "Waiting for response from AI provider",
+  "plugin_theme_change_theme": "Change theme",
+  "plugin_theme_group_available": "Available",
+  "plugin_theme_group_current": "Current",
+  "plugin_theme_group_store": "Store",
+  "plugin_theme_install_theme": "Install theme",
+  "plugin_theme_no_embed_theme": "No embed theme found",
+  "plugin_theme_open_setting": "Open theme settings",
+  "plugin_theme_restore_action": "Restore",
+  "plugin_theme_restore_command_description": "Remove all custom themes and restore to default",
+  "plugin_theme_restore_title": "Remove all custom themes and restore to default",
+  "plugin_theme_select_model": "Please select an AI model in theme settings",
+  "plugin_theme_setting_ai_model_label": "AI model",
+  "plugin_theme_setting_ai_model_tooltip": "AI model to use for generating theme.",
+  "plugin_theme_store_install_by": "Install %s by %s",
+  "plugin_theme_uninstall_system_forbidden": "Cannot uninstall system theme",
+  "plugin_theme_uninstall_theme": "Uninstall theme",
   "toolbar_copy": "Copy",
   "toolbar_copied": "Copied",
   "toolbar_snooze": "Snooze",
