--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -504,10 +504,32 @@
   "plugin_mediaplayer_no_media": "Nenhum mídia",
   "plugin_mediaplayer_artist": "Artista",
   "plugin_mediaplayer_album": "Álbum",
+  "plugin_theme_ai_command_description": "Gerar um novo tema com IA",
   "plugin_theme_ai_contacting": "Entrando em contato com a IA...",
-  "plugin_theme_ai_generating": "Gerando...",
+  "plugin_theme_ai_extract_failed": "Falha ao extrair o JSON",
+  "plugin_theme_ai_generate_subtitle": "Pressione Enter para gerar",
+  "plugin_theme_ai_generate_title": "Gerar tema com IA",
   "plugin_theme_ai_generated": "Tema gerado",
+  "plugin_theme_ai_generating": "Gerando...",
+  "plugin_theme_ai_input_hint": "Descreva o tema que você quer gerar",
+  "plugin_theme_ai_unmarshal_failed": "Falha ao analisar o modelo",
   "plugin_theme_ai_waiting": "Aguardando resposta do provedor de IA",
+  "plugin_theme_change_theme": "Alterar tema",
+  "plugin_theme_group_available": "Disponíveis",
+  "plugin_theme_group_current": "Atual",
+  "plugin_theme_group_store": "Loja",
+  "plugin_theme_install_theme": "Instalar tema",
+  "plugin_theme_no_embed_theme": "Nenhum tema incorporado encontrado",
+  "plugin_theme_open_setting": "Abrir configurações do tema",
+  "plugin_theme_restore_action": "Restaurar",
+  "plugin_theme_restore_command_description": "Remover todos os temas personalizados e restaurar o padrão",
+  "plugin_theme_restore_title": "Remover todos os temas personalizados e restaurar o padrão",
+  "plugin_theme_select_model": "Selecione um modelo de IA nas configurações do tema",
+  "plugin_theme_setting_ai_model_label": "Modelo de IA",
+  "plugin_theme_setting_ai_model_tooltip": "Modelo de IA usado para gerar o tema.",
+  "plugin_theme_store_install_by": "Instalar %s por %s",
+  "plugin_theme_uninstall_system_forbidden": "Não é possível desinstalar tema do sistema",
+  "plugin_theme_uninstall_theme": "Desinstalar tema",
   "plugin_mediaplayer_duration": "Duração",
   "toolbar_copy": "Copiar",
   "toolbar_copied": "Copiado",
