--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -503,10 +503,32 @@
   "plugin_mediaplayer_no_media": "Нет медиа",
   "plugin_mediaplayer_artist": "Исполнитель",
   "plugin_mediaplayer_album": "Альбом",
+  "plugin_theme_ai_command_description": "Сгенерировать новую тему с ИИ",
   "plugin_theme_ai_contacting": "Подключаемся к ИИ...",
-  "plugin_theme_ai_generating": "Создаем...",
+  "plugin_theme_ai_extract_failed": "Не удалось извлечь JSON",
+  "plugin_theme_ai_generate_subtitle": "Нажмите Enter для генерации",
+  "plugin_theme_ai_generate_title": "Сгенерировать тему с ИИ",
   "plugin_theme_ai_generated": "Тема создана",
+  "plugin_theme_ai_generating": "Создаем...",
+  "plugin_theme_ai_input_hint": "Опишите тему, которую нужно сгенерировать",
+  "plugin_theme_ai_unmarshal_failed": "Не удалось разобрать модель",
   "plugin_theme_ai_waiting": "Ожидание ответа от провайдера ИИ",
+  "plugin_theme_change_theme": "Сменить тему",
+  "plugin_theme_group_available": "Доступные",
+  "plugin_theme_group_current": "Текущая",
+  "plugin_theme_group_store": "Магазин",
+  "plugin_theme_install_theme": "Установить тему",
+  "plugin_theme_no_embed_theme": "Встроенные темы не найдены",
+  "plugin_theme_open_setting": "Открыть настройки темы",
+  "plugin_theme_restore_action": "Восстановить",
+  "plugin_theme_restore_command_description": "Удалить все пользовательские темы и восстановить по умолчанию",
+  "plugin_theme_restore_title": "Удалить все пользовательские темы и восстановить по умолчанию",
+  "plugin_theme_select_model": "Выберите модель ИИ в настройках темы",
+  "plugin_theme_setting_ai_model_label": "Модель ИИ",
+  "plugin_theme_setting_ai_model_tooltip": "Модель ИИ для генерации темы.",
+  "plugin_theme_store_install_by": "Установить %s от %s",
+  "plugin_theme_uninstall_system_forbidden": "Нельзя удалить системную тему",
+  "plugin_theme_uninstall_theme": "Удалить тему",
   "plugin_mediaplayer_duration": "Длительность",
   "toolbar_copy": "Копировать",
   "toolbar_copied": "Скопировано",
