--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -509,10 +509,32 @@
   "plugin_mediaplayer_no_media": "没有正在播放的媒体",
   "plugin_mediaplayer_artist": "艺术家",
   "plugin_mediaplayer_album": "专辑",
+  "plugin_theme_ai_command_description": "使用 AI 生成新主题",
   "plugin_theme_ai_contacting": "正在连接 AI...",
-  "plugin_theme_ai_generating": "正在生成...",
+  "plugin_theme_ai_extract_failed": "提取 JSON 失败",
+  "plugin_theme_ai_generate_subtitle": "按 Enter 生成",
+  "plugin_theme_ai_generate_title": "使用 AI 生成主题",
   "plugin_theme_ai_generated": "主题已生成",
+  "plugin_theme_ai_generating": "正在生成...",
+  "plugin_theme_ai_input_hint": "请描述你想生成的主题",
+  "plugin_theme_ai_unmarshal_failed": "解析模型失败",
   "plugin_theme_ai_waiting": "正在等待 AI 服务返回结果",
+  "plugin_theme_change_theme": "更换主题",
+  "plugin_theme_group_available": "可用",
+  "plugin_theme_group_current": "当前",
+  "plugin_theme_group_store": "商店",
+  "plugin_theme_install_theme": "安装主题",
+  "plugin_theme_no_embed_theme": "未找到内置主题",
+  "plugin_theme_open_setting": "打开主题设置",
+  "plugin_theme_restore_action": "恢复",
+  "plugin_theme_restore_command_description": "移除所有自定义主题并恢复默认",
+  "plugin_theme_restore_title": "移除所有自定义主题并恢复默认",
+  "plugin_theme_select_model": "请在主题设置中选择 AI 模型",
+  "plugin_theme_setting_ai_model_label": "AI 模型",
+  "plugin_theme_setting_ai_model_tooltip": "用于生成主题的 AI 模型。",
+  "plugin_theme_store_install_by": "安装 %s（作者：%s）",
+  "plugin_theme_uninstall_system_forbidden": "无法卸载系统主题",
+  "plugin_theme_uninstall_theme": "卸载主题",
   "toolbar_copy": "复制",
   "toolbar_copied": "已复制",
   "toolbar_snooze": "稍后提醒",
