feat(layout): implement WoxGridView and WoxGridController for enhanced grid functionality
* Introduced `WoxGridView` for displaying items in a grid layout with support for grouping.
* Created `WoxGridController` extending `WoxBaseListController` to manage grid-specific navigation and scrolling.
* Added methods for updating grid parameters, calculating row heights, and synchronizing scroll positions with active indices.
* Enhanced item interaction with mouse hover and tap events for better user experience.
* Implemented fuzzy matching for filtering items based on user input.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -455,6 +455,9 @@
   "plugin_calculator_copy_result": "Copy result",
   "plugin_calculator_recalculate": "Recalculate",
   "plugin_calculator_input_expression": "Input expression to calculate",
+  "plugin_emoji_copy": "Copy emoji",
+  "plugin_emoji_frequently_used": "Frequently Used",
+  "plugin_emoji_all": "Emojis",
   "plugin_file_open": "Open",
   "plugin_file_open_containing_folder": "Open containing folder",
   "plugin_file_show_context_menu": "Show system context menu",
