--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -452,6 +452,9 @@
   "plugin_calculator_copy_result": "Copiar resultado",
   "plugin_calculator_recalculate": "Recalcular",
   "plugin_calculator_input_expression": "Digite a expressão para calcular",
+  "plugin_emoji_copy": "Copiar emoji",
+  "plugin_emoji_frequently_used": "Usados frequentemente",
+  "plugin_emoji_all": "Emojis",
   "plugin_file_open": "Abrir",
   "plugin_file_open_containing_folder": "Abrir pasta contendo",
   "plugin_file_show_context_menu": "Mostrar menu de contexto do sistema",
