--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -452,6 +452,9 @@
   "plugin_calculator_copy_result": "Копировать результат",
   "plugin_calculator_recalculate": "Пересчитать",
   "plugin_calculator_input_expression": "Введите выражение для вычисления",
+  "plugin_emoji_copy": "Копировать эмодзи",
+  "plugin_emoji_frequently_used": "Часто используемые",
+  "plugin_emoji_all": "Эмодзи",
   "plugin_file_open": "Открыть",
   "plugin_file_open_containing_folder": "Открыть содержащую папку",
   "plugin_file_show_context_menu": "Показать системное контекстное меню",
