--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -456,6 +456,9 @@
   "plugin_calculator_copy_result": "复制结果",
   "plugin_calculator_recalculate": "重新计算",
   "plugin_calculator_input_expression": "输入表达式进行计算",
+  "plugin_emoji_copy": "复制表情",
+  "plugin_emoji_frequently_used": "常用",
+  "plugin_emoji_all": "全部表情",
   "plugin_file_open": "打开",
   "plugin_file_open_containing_folder": "打开所在文件夹",
   "plugin_file_show_context_menu": "显示系统右键菜单",
