feat(emoji): add support for copying large emoji icons
- Implemented a new action to copy large emoji images to the clipboard.
- Added `plugin_emoji_copy_large` entry in language files for localization.
- Introduced platform-specific implementations for emoji rendering on macOS and Windows.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -456,6 +456,7 @@
   "plugin_calculator_recalculate": "Recalculate",
   "plugin_calculator_input_expression": "Input expression to calculate",
   "plugin_emoji_copy": "Copy emoji",
+  "plugin_emoji_copy_large": "Copy large icon",
   "plugin_emoji_frequently_used": "Frequently Used",
   "plugin_emoji_all": "Emojis",
   "plugin_file_open": "Open",
