--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -453,6 +453,7 @@
   "plugin_calculator_recalculate": "Пересчитать",
   "plugin_calculator_input_expression": "Введите выражение для вычисления",
   "plugin_emoji_copy": "Копировать эмодзи",
+  "plugin_emoji_copy_large": "Копировать большой значок",
   "plugin_emoji_frequently_used": "Часто используемые",
   "plugin_emoji_all": "Эмодзи",
   "plugin_file_open": "Открыть",
