feat(emoji): add frequently used emoji removal functionality
* Updated `createEmojiResult` to include an action for removing emojis from frequently used list.
* Introduced `removeUsage` method to handle the removal logic.
* Added localization support for the new action in `en_US.json`, `pt_BR.json`, `ru_RU.json`, and `zh_CN.json`.
* Adjusted build constraints in `emoji_image_other.go` for better platform compatibility.

--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -454,6 +454,7 @@
   "plugin_calculator_input_expression": "Введите выражение для вычисления",
   "plugin_emoji_copy": "Копировать эмодзи",
   "plugin_emoji_copy_large": "Копировать большой значок",
+  "plugin_emoji_remove_frequently_used": "Удалить из часто используемых",
   "plugin_emoji_frequently_used": "Часто используемые",
   "plugin_emoji_all": "Эмодзи",
   "plugin_file_open": "Открыть",
