feat(plugin): add form action support for plugins [WIP]
* Introduced `FormActionProxyCreator` interface for plugins to create form action proxies.
* Updated `QueryResultAction` to include a `Type` field to differentiate between immediate execution and form submission actions.
* Enhanced `EmojiPlugin` to allow users to add custom descriptions for emojis via a form action.
* Implemented UI changes to display form actions in the Flutter client, including a new `WoxFormActionView` component.
* Added localization strings for new features in English, Portuguese, Russian, and Chinese.
* Updated WebSocket handling to support form action submissions.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -560,5 +560,9 @@
   "selection_preview": "Preview",
   "selection_created_at": "Created At",
   "selection_modified_at": "Modified At",
-  "selection_size": "Size"
+  "selection_size": "Size",
+  "plugin_emoji_add_description": "Add description",
+  "plugin_emoji_add_description_label": "Description",
+  "ui_not_supported_field": "Field type not supported",
+  "plugin_emoji_add_description_hint": "Your custom description(s) for this emoji, separate multiple with commas."
 }
