feat(emoji): update emoji description to keyword functionality
* Changed the functionality from adding a description to adding keywords for emojis.
* Updated relevant labels and hints in English, Portuguese, Russian, and Chinese language files.
* Modified the form action view to handle the new keyword input.
* Adjusted the WoxLauncherController to accommodate the new form submission structure.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -561,8 +561,8 @@
   "selection_created_at": "Created At",
   "selection_modified_at": "Modified At",
   "selection_size": "Size",
-  "plugin_emoji_add_description": "Add description",
-  "plugin_emoji_add_description_label": "Description",
-  "ui_not_supported_field": "Field type not supported",
-  "plugin_emoji_add_description_hint": "Your custom description(s) for this emoji, separate multiple with commas."
+  "plugin_emoji_add_keyword": "Add keyword",
+  "plugin_emoji_add_keyword_label": "Keyword",
+  "plugin_emoji_add_keyword_hint": "Add custom keywords to help you find this emoji faster, separate multiple with commas.",
+  "ui_not_supported_field": "Field type not supported"
 }
