feat(clipboard): add content editing functionality
* Introduced `UpdateContent` method in `ClipboardDB` to update clipboard record content.
* Added edit action in the clipboard plugin to allow users to modify text content.
* Updated language files for new action labels in English, Portuguese, Russian, and Chinese.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -265,6 +265,13 @@
   "plugin_clipboard_primary_action": "Primary action",
   "plugin_clipboard_primary_action_copy_to_clipboard": "Copy to clipboard",
   "plugin_clipboard_primary_action_paste_to_active_app": "Paste to active app",
+  "plugin_clipboard_copy": "Copy",
+  "plugin_clipboard_mark_favorite": "Mark as favorite",
+  "plugin_clipboard_cancel_favorite": "Cancel favorite",
+  "plugin_clipboard_delete": "Delete",
+  "plugin_clipboard_edit_text": "Edit text",
+  "plugin_clipboard_edit_text_label": "Content",
+  "plugin_clipboard_edit_text_hint": "Edit clipboard text content",
   "plugin_indicator_activate": "Activate",
   "plugin_indicator_activate_plugin": "Activate the %s plugin",
   "plugin_sys_empty_trash": "Empty Trash",
