--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -263,6 +263,13 @@
   "plugin_clipboard_primary_action": "Ação principal",
   "plugin_clipboard_primary_action_copy_to_clipboard": "Copiar para a área de transferência",
   "plugin_clipboard_primary_action_paste_to_active_app": "Colar no aplicativo ativo",
+  "plugin_clipboard_copy": "Copiar",
+  "plugin_clipboard_mark_favorite": "Marcar como favorito",
+  "plugin_clipboard_cancel_favorite": "Cancelar favorito",
+  "plugin_clipboard_delete": "Excluir",
+  "plugin_clipboard_edit_text": "Editar texto",
+  "plugin_clipboard_edit_text_label": "Conteúdo",
+  "plugin_clipboard_edit_text_hint": "Editar conteúdo de texto da área de transferência",
   "plugin_indicator_activate": "Ativar",
   "plugin_indicator_activate_plugin": "Ativar o plugin %s",
   "plugin_sys_empty_trash": "Esvaziar lixeira",
