--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -263,6 +263,13 @@
   "plugin_clipboard_primary_action": "Основное действие",
   "plugin_clipboard_primary_action_copy_to_clipboard": "Копировать в буфер обмена",
   "plugin_clipboard_primary_action_paste_to_active_app": "Вставить в активное приложение",
+  "plugin_clipboard_copy": "Копировать",
+  "plugin_clipboard_mark_favorite": "Добавить в избранное",
+  "plugin_clipboard_cancel_favorite": "Удалить из избранного",
+  "plugin_clipboard_delete": "Удалить",
+  "plugin_clipboard_edit_text": "Редактировать текст",
+  "plugin_clipboard_edit_text_label": "Содержимое",
+  "plugin_clipboard_edit_text_hint": "Редактировать текстовое содержимое буфера обмена",
   "plugin_indicator_activate": "Активировать",
   "plugin_indicator_activate_plugin": "Активировать плагин %s",
   "plugin_sys_empty_trash": "Очистить корзину",
