--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -266,6 +266,13 @@
   "plugin_clipboard_primary_action": "主要操作",
   "plugin_clipboard_primary_action_copy_to_clipboard": "复制到剪贴板",
   "plugin_clipboard_primary_action_paste_to_active_app": "粘贴到活动应用程序",
+  "plugin_clipboard_copy": "复制",
+  "plugin_clipboard_mark_favorite": "添加到收藏",
+  "plugin_clipboard_cancel_favorite": "取消收藏",
+  "plugin_clipboard_delete": "删除",
+  "plugin_clipboard_edit_text": "编辑文本",
+  "plugin_clipboard_edit_text_label": "内容",
+  "plugin_clipboard_edit_text_hint": "编辑剪贴板文本内容",
   "plugin_indicator_activate": "激活",
   "plugin_indicator_activate_plugin": "激活%s插件",
   "plugin_sys_empty_trash": "清空回收站",
