feat(clipboard): add alias functionality for clipboard items
* Introduced an `Alias` field in `ClipboardRecord` and `FavoriteClipboardItem` to allow users to set custom aliases for clipboard entries.
* Added UI components to edit the alias of clipboard items.
* Updated database schema to include the `alias` column in `clipboard_history`.
* Enhanced search functionality to include alias in search results.
* Updated localization files to support new alias-related strings in multiple languages.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -272,6 +272,9 @@
   "plugin_clipboard_edit_text": "Edit text",
   "plugin_clipboard_edit_text_label": "Content",
   "plugin_clipboard_edit_text_hint": "Edit clipboard text content",
+  "plugin_clipboard_edit_alias": "Edit alias",
+  "plugin_clipboard_edit_alias_label": "Alias",
+  "plugin_clipboard_edit_alias_hint": "Set a custom alias for this item",
   "plugin_indicator_activate": "Activate",
   "plugin_indicator_activate_plugin": "Activate the %s plugin",
   "plugin_sys_empty_trash": "Empty Trash",
