--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -566,5 +566,26 @@
   "plugin_emoji_add_keyword": "Добавить ключевое слово",
   "plugin_emoji_add_keyword_label": "Ключевое слово",
   "plugin_emoji_add_keyword_hint": "Добавьте ключевые слова для быстрого поиска этого эмодзи, разделяйте запятыми.",
+  "plugin_clipboard_copy_date": "Дата копирования",
+  "plugin_clipboard_copy_characters": "Скопировано символов",
+  "plugin_clipboard_image_width": "Ширина изображения",
+  "plugin_clipboard_image_height": "Высота изображения",
+  "plugin_clipboard_image_size": "Размер изображения",
+  "plugin_clipboard_keep_text_history": "Хранить историю текста",
+  "plugin_clipboard_days": "дней",
+  "plugin_clipboard_keep_image_history": "Хранить историю изображений",
+  "plugin_clipboard_primary_action": "Основное действие",
+  "plugin_clipboard_primary_action_copy_to_clipboard": "Копировать в буфер обмена",
+  "plugin_clipboard_primary_action_paste_to_active_app": "Вставить в активное приложение",
+  "plugin_clipboard_copy": "Копировать",
+  "plugin_clipboard_mark_favorite": "Добавить в избранное",
+  "plugin_clipboard_cancel_favorite": "Убрать из избранного",
+  "plugin_clipboard_delete": "Удалить",
+  "plugin_clipboard_edit_text": "Редактировать текст",
+  "plugin_clipboard_edit_text_label": "Содержимое",
+  "plugin_clipboard_edit_text_hint": "Редактировать текстовое содержимое буфера обмена",
+  "plugin_clipboard_edit_alias": "Редактировать псевдоним",
+  "plugin_clipboard_edit_alias_label": "Псевдоним",
+  "plugin_clipboard_edit_alias_hint": "Установить пользовательский псевдоним для этого элемента",
   "ui_not_supported_field": "Тип поля не поддерживается"
 }
