--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -273,6 +273,9 @@
   "plugin_clipboard_edit_text": "编辑文本",
   "plugin_clipboard_edit_text_label": "内容",
   "plugin_clipboard_edit_text_hint": "编辑剪贴板文本内容",
+  "plugin_clipboard_edit_alias": "编辑别名",
+  "plugin_clipboard_edit_alias_label": "别名",
+  "plugin_clipboard_edit_alias_hint": "为此项设置自定义别名",
   "plugin_indicator_activate": "激活",
   "plugin_indicator_activate_plugin": "激活%s插件",
   "plugin_sys_empty_trash": "清空回收站",
