--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -567,5 +567,26 @@
   "plugin_emoji_add_keyword": "Adicionar palavra-chave",
   "plugin_emoji_add_keyword_label": "Palavra-chave",
   "plugin_emoji_add_keyword_hint": "Adicione palavras-chave personalizadas para encontrar este emoji mais rápido, separadas por vírgulas.",
+  "plugin_clipboard_copy_date": "Data da cópia",
+  "plugin_clipboard_copy_characters": "Caracteres copiados",
+  "plugin_clipboard_image_width": "Largura da imagem",
+  "plugin_clipboard_image_height": "Altura da imagem",
+  "plugin_clipboard_image_size": "Tamanho da imagem",
+  "plugin_clipboard_keep_text_history": "Manter histórico de texto por",
+  "plugin_clipboard_days": "dias",
+  "plugin_clipboard_keep_image_history": "Manter histórico de imagens por",
+  "plugin_clipboard_primary_action": "Ação principal",
+  "plugin_clipboard_primary_action_copy_to_clipboard": "Copiar para a área de transferência",
+  "plugin_clipboard_primary_action_paste_to_active_app": "Colar no aplicativo ativo",
+  "plugin_clipboard_copy": "Copiar",
+  "plugin_clipboard_mark_favorite": "Marcar como favorito",
+  "plugin_clipboard_cancel_favorite": "Cancelar favorito",
+  "plugin_clipboard_delete": "Excluir",
+  "plugin_clipboard_edit_text": "Editar texto",
+  "plugin_clipboard_edit_text_label": "Conteúdo",
+  "plugin_clipboard_edit_text_hint": "Editar conteúdo do texto da área de transferência",
+  "plugin_clipboard_edit_alias": "Editar alias",
+  "plugin_clipboard_edit_alias_label": "Alias",
+  "plugin_clipboard_edit_alias_hint": "Definir um alias personalizado para este item",
   "ui_not_supported_field": "Tipo de campo não suportado"
 }
