feat(ai): add MCP server support for AI plugin development
- Implemented MCP server functionality in the main application.
- Added settings for enabling/disabling the MCP server and configuring its port.
- Updated UI to include options for MCP server in the settings.
- Integrated MCP server start/stop logic in the settings update handler.
- Created MCP server and tools for plugin development, including documentation retrieval and scaffold generation.
- Added translations for new settings in multiple languages.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -131,6 +131,10 @@
   "ui_ai_providers_api_key_required": "API key is required.",
   "ui_ai_providers_host_required": "Host is required.",
   "ui_ai_model": "AI Model",
+  "ui_ai_mcp_server_enable": "Enable MCP Server",
+  "ui_ai_mcp_server_enable_tips": "Enable MCP (Model Context Protocol) server for AI plugin development. When enabled, AI tools like Claude Desktop can connect to help develop Wox plugins.",
+  "ui_ai_mcp_server_port": "MCP Server Port",
+  "ui_ai_mcp_server_port_tips": "The port number for the MCP server. Remote URL: http://localhost:{port}/mcp",
   "ui_search_plugins": "Search %d plugins",
   "ui_plugin_author": "Author",
   "ui_plugin_runtime": "Runtime",
