--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -129,6 +129,10 @@
   "ui_ai_providers_api_key_required": "A chave de API obrigatória.",
   "ui_ai_providers_host_required": "O host obrigatório.",
   "ui_ai_model": "Modelo de IA",
+  "ui_ai_mcp_server_enable": "Habilitar Servidor MCP",
+  "ui_ai_mcp_server_enable_tips": "Habilitar servidor MCP (Model Context Protocol) para desenvolvimento de plugins de IA. Quando habilitado, ferramentas de IA como Claude Desktop podem se conectar para ajudar a desenvolver plugins Wox.",
+  "ui_ai_mcp_server_port": "Porta do Servidor MCP",
+  "ui_ai_mcp_server_port_tips": "O número da porta para o servidor MCP. URL remota: http://localhost:{port}/mcp",
   "ui_search_plugins": "Pesquisar %d plugins",
   "ui_plugin_author": "Autor",
   "ui_plugin_runtime": "Runtime",
