--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -129,6 +129,10 @@
   "ui_ai_providers_api_key_required": "API-ключ обязателен",
   "ui_ai_providers_host_required": "Хост обязателен",
   "ui_ai_model": "Модель",
+  "ui_ai_mcp_server_enable": "Включить MCP-сервер",
+  "ui_ai_mcp_server_enable_tips": "Включить MCP (Model Context Protocol) сервер для разработки AI-плагинов. При включении AI-инструменты, такие как Claude Desktop, могут подключаться для помощи в разработке плагинов Wox.",
+  "ui_ai_mcp_server_port": "Порт MCP-сервера",
+  "ui_ai_mcp_server_port_tips": "Номер порта для MCP-сервера. Удалённый URL: http://localhost:{port}/mcp",
   "ui_search_plugins": "Найти %d плагинов",
   "ui_plugin_author": "Автор",
   "ui_plugin_runtime": "Рантайм",
