--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -131,6 +131,10 @@
   "ui_ai_providers_api_key_required": "API密钥是必需的",
   "ui_ai_providers_host_required": "API地址是必需的",
   "ui_ai_model": "AI模型",
+  "ui_ai_mcp_server_enable": "启用 MCP 服务器",
+  "ui_ai_mcp_server_enable_tips": "启用 MCP（模型上下文协议）服务器用于 AI 插件开发。启用后，Claude Desktop 等 AI 工具可以连接来帮助开发 Wox 插件。",
+  "ui_ai_mcp_server_port": "MCP 服务器端口",
+  "ui_ai_mcp_server_port_tips": "MCP 服务器的端口号。远程 URL: http://localhost:{port}/mcp",
   "ui_search_plugins": "搜索 %d 个插件",
   "ui_plugin_author": "作者",
   "ui_plugin_runtime": "运行时",
